--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ a:hover {
     left: 50%;
     transform: translateX(-50%);
     padding: 40px 0;
-    max-width: 1150px;
+    max-width: 1300px;
     width: 100%;
 }
 .header__bottom::after {
@@ -97,6 +97,11 @@ a:hover {
     display: none;
     border-radius: 40px;
     z-index: -1;
+}
+
+.header__link-active.header__list-link::after,
+.main-section__link-active.main-section__link::after {
+    opacity: 1;
 }
 
 .sublist-show {
@@ -163,7 +168,8 @@ a:hover {
     transition: .2s ease all;
     padding-bottom: 10px;
 }
-.header__list-link::after {
+.header__list-link::after,
+.main-section__link::after {
     content: '';
     position: absolute;
     left: 0;
@@ -174,7 +180,11 @@ a:hover {
     transition: .2s ease all;
     opacity: 0;
 }
-.header__list-link:hover.header__list-link::after {
+.main-section__link::after {
+    border-bottom: 2px solid rgb(33,160,231);
+}
+.header__list-link:hover.header__list-link::after,
+.main-section__link:hover.main-section__link::after {
     opacity: 1;
 }
 
@@ -955,6 +965,7 @@ section.quote {
     border-radius: 50px;
     box-shadow: 0px 0px 40px 40px #fff;
     margin-bottom: 100px;
+    padding-bottom: 10px;
 }
 
 .main-section__link:last-child {
