--- a/css/style.css
+++ b/css/style.css
@@ -1557,6 +1557,10 @@ section.quote {
         font-size: 32px;
         line-height: 38px;
     }
+    .card__desc-text {
+        font-size: 18px;
+        line-height: 22px;
+    }
 }
 
 @media (max-width: 800px) {
@@ -1710,6 +1714,8 @@ section.quote {
     .desc__card-p {
         width: 100%;
         text-align: center;
+        font-size: 20px;
+        line-height: 24px;
     }
     .advantages__cards {
         grid-template-columns: 1fr;
@@ -1727,8 +1733,12 @@ section.quote {
         grid-template-columns: 1fr;
         row-gap: 20px;
     }
+    .projects__cards {
+        padding: 0;
+    }
     .projects__card {
         padding-bottom: 45px;
+        width: unset;
     }
     .projects__card-desc {
         text-align: center;
@@ -1823,7 +1833,7 @@ section.quote {
         text-align: center;
     }
     .main-section__title-h1 {
-        font-size: 32px;
+        font-size: 30px;
         line-height: 40px;
     }
     .gradient-text {
@@ -1888,6 +1898,7 @@ section.quote {
     }
     .desc__card {
         padding: 10px;
+        width: unset;
     }
     .desc__card-text {
         gap: 10px;
@@ -1905,8 +1916,8 @@ section.quote {
         line-height: 30px;
     }
     .projects__card-desc {
-        font-size: 20px;
-        line-height: 24px;
+        font-size: 18px;
+        line-height: 20px;
     }
     .news__card {
         padding: 10px;
@@ -1925,7 +1936,8 @@ section.quote {
         padding: 10px;
     }
     .requisites__info-text {
-        font-size: 20px;
+        font-size: 18px;
+        line-height: 20px;
     }
     .page__bottom {
         justify-content: center;
